# SMO-Plugin-Base

./: CMakeLists.txt  README.md
cmake/: SwitchTools.cmake
libs/NintendoSDK/nn/: hid.h  ro.h  util.h
libs/NintendoSDK/nn/fs/: fs_types.hpp
libs/exl/: module.cpp
libs/exl/init/: crt0.s  init.cpp
libs/exl/nx/: types.h
libs/exl/reloc/: elf.cpp  rtld.hpp
libs/exl/rtld/: ModuleObject.hpp
libs/game/GameData/: GameDataFile.h  GameDataFunction.h  GameDataHolder.h
libs/game/StageScene/: StageScene.h  StageSceneStateMiss.h
libs/rs/: util.hpp
module/: subsdk9.specs.template
src/: types.h
src/logger/: Logger.hpp
src/plugin/: PluginCtx.cpp  PluginCtx.h
src/plugin/events/: EventHolders.h  Events.h  HookEvent.h  ModEvent.h
src/program/: main.cpp
